[package]
name = "vmtrans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16",features = ["derive"]}
env_logger = "0.9.0"
log = "0.4.17"
regex = "1.6.0"
strum = "0.24.1"
strum_macros = "0.24.2"
